--- a/sqitch.conf
+++ b/sqitch.conf
@@ -3,6 +3,8 @@
 	# plan_file = sqitch.plan
 	# top_dir = .
 [engine "pg"]
-	target = db:pg://postgres@db/
+	target = dev
 	# registry = sqitch
 	# client = psql
+[target "dev"]
+	uri = db:pg://postgres@db:5432/mappamundi_dev
