Tweak travis install phase. Signed-off-by: Elliot Murphy <elliot@elliotmurphy.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ node_js:
   - "6"
 install:
   - npm install -g create-elm-app
+  - elm-app make
 script: elm-app test
 notifications:
   slack: kindlyops:YkyQcYjU04mC2JTN1orHBDCs
