Add --yes to stop TravisCI prompts Signed-off-by: Elliot Murphy <elliot@elliotmurphy.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
   - "6"
 install:
   - npm install -g create-elm-app
-  - elm-app make
+  - elm-app make --yes
 script: elm-app test
 notifications:
   slack: kindlyops:YkyQcYjU04mC2JTN1orHBDCs
