--- a/.travis.yml
+++ b/.travis.yml
@@ -30,9 +30,9 @@ install:
   - node --version
   - npm --version
   - npm install -g elm@$ELM_VERSION
-  - mv $(npm config get prefix)/bin/elm-make $(npm config get prefix)/bin/elm-make-old
-  - echo "#\!/bin/bash\\n\\necho \"Running elm-make with sysconfcpus -n 2\"\\n\\n$TRAVIS_BUILD_DIR/sysconfcpus/bin/sysconfcpus -n 2 elm-make-old \"\$@\"" > $(npm config get prefix)/bin/elm-make
-  - chmod +x $(npm config get prefix)/bin/elm-make
+  - # mv $(npm config get prefix)/bin/elm-make $(npm config get prefix)/bin/elm-make-old
+  - # echo "#\!/bin/bash\\n\\necho \"Running elm-make with sysconfcpus -n 2\"\\n\\n$TRAVIS_BUILD_DIR/sysconfcpus/bin/sysconfcpus -n 2 elm-make-old \"\$@\"" > $(npm config get prefix)/bin/elm-make
+  - # chmod +x $(npm config get prefix)/bin/elm-make
   - npm install -g create-elm-app@0.2.1
   - elm-app make --yes
 
