Add package install.
Signed-off-by: Elliot Murphy <elliot@elliotmurphy.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ install:
   - node --version
   - npm --version
   - npm install -g elm@$ELM_VERSION
+  - npm install
 
 script:
   - npm run-script build
