Don't need a build matrix yet. Signed-off-by: Elliot Murphy <elliot@elliotmurphy.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ os:
   - linux
 
 env:
-  matrix:
-    - ELM_VERSION=0.18.0 TARGET_NODE_VERSION=node
+  - ELM_VERSION=0.18.0
+  - TARGET_NODE_VERSION=node
 
 install:
   - nvm install $TARGET_NODE_VERSION
