Trying to stop causing two travis builds
Signed-off-by: Elliot Murphy <elliot@elliotmurphy.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,7 @@ os:
   - linux
 
 env:
-  - ELM_VERSION=0.18.0
-  - TARGET_NODE_VERSION=node
+  - ELM_VERSION=0.18.0 TARGET_NODE_VERSION=6.9.1
 
 install:
   - nvm install $TARGET_NODE_VERSION
