--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,8 @@ os:
   - linux
 
 env:
-  - ELM_VERSION=0.18.0 TARGET_NODE_VERSION=6.9.1
+  - ELM_VERSION=0.18.0
+  - TARGET_NODE_VERSION=6.9.1
 
 install:
   - nvm install $TARGET_NODE_VERSION
