--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
   - nvm use 6.9.1
   - node --version
   - npm --version
-  - npm install -g elm@=0.18.0
+  - npm install -g elm@0.18.0
   - npm install
 
 script:
