Docker image serving web UI via Caddy
Signed-off-by: Elliot Murphy <elliot@elliotmurphy.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ install:
 script:
   - npm run-script build
   - npm run-script test
+  - docker build -t kindlyops/complianceops .
 
 notifications:
   slack: kindlyops:YkyQcYjU04mC2JTN1orHBDCs
