Docker image and CircleCI
Signed-off-by: Elliot Murphy <elliot@elliotmurphy.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '2'
 services:
   sqitch:
-    image: kindlyops/sqitch:pgsql
-    working_dir: /code
+    build: .
+    working_dir: /src
     volumes:
-      - .:/code
+      - .:/src
     links:
       - db
     command: "/bin/true"
@@ -15,7 +15,6 @@ services:
       - "3000:3000"
     links:
       - db
-    environment:
-      - JWT_SECRET
+    env_file: .env
   db:
     image: postgres:9.5
