--- a/circle.yml
+++ b/circle.yml
@@ -5,7 +5,7 @@ machine:
     - sudo curl -L https://github.com/docker/compose/releases/download/1.7.0/docker-compose-Linux-x86_64 > docker-compose
     - sudo mv docker-compose /usr/local/bin/
     - sudo chmod +x /usr/local/bin/docker-compose
-    - touch .env
+    - touch mappamundi/.env
   services:
     - docker
 
