--- a/circle.yml
+++ b/circle.yml
@@ -12,7 +12,9 @@ machine:
 test:
   override:
     - npm run-script build
+        timeout: 900
     - npm run-script test
+        timeout: 900
     - docker build -t kindlyops/complianceops .
 
 
