Add missing then
Signed-off-by: Elliot Murphy <elliot@elliotmurphy.com>

--- a/circle.yml
+++ b/circle.yml
@@ -16,6 +16,7 @@ dependencies:
     - docker-compose run --entrypoint="psql -h db -U postgres -c 'CREATE DATABASE mappamundi_dev'" sqitch
     - |
       if [ ! -d sysconfcpus/bin ];
+      then
         git clone https://github.com/obmarg/libsysconfcpus.git;
         cd libsysconfcpus;
         ./configure --prefix="$HOME/$CIRCLE_PROJECT_REPONAME/sysconfcpus";
