--- a/circle.yml
+++ b/circle.yml
@@ -31,7 +31,7 @@ dependencies:
 test:
   override:
     - docker-compose run sqitch deploy
-    - docker build -t kindlyops/mappamundi .
+    - docker build --rm=false -t kindlyops/mappamundi .
     - $HOME/$CIRCLE_PROJECT_REPONAME/sysconfcpus/bin/sysconfcpus -n 2 npm run-script build:
         timeout: 900
         pwd:
