--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "elm-webpack-loader": "^3.0.5",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
+    "glob": "^7.1.1",
     "html-webpack-plugin": "2.24.1",
     "path-exists": "3.0.0",
     "postcss-loader": "1.1.1",
