WIP: hot-reload for docker-compose
This is not quite working. When fixed, it should allow
running the elm front end in hot-reload mode without
needing nodejs running on your laptop, only docker.

Signed-off-by: Elliot Murphy <elliot@elliotmurphy.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '2'
 services:
   sqitch:
-    build: .
+    build:
+      context: .
     working_dir: /src
     volumes:
       - .:/src
@@ -17,3 +18,16 @@ services:
     env_file: .env
   db:
     image: postgres:9.5
+  web:
+    build:
+      context: .
+      dockerfile: web/Dockerfile-hotreload
+    working_dir: /src
+    volumes:
+      - .:/src
+      - /src/node_modules
+    links:
+      - api
+    ports:
+      - "5001:2015"
+    command: [npm, run-script, start]
