Elm webui runs under docker-compose now.
This supports full hot-reload with webpack.
node/npm should no longer be needed on the dev
laptop, everything is run inside the container.

Signed-off-by: Elliot Murphy <elliot@elliotmurphy.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,16 +18,16 @@ services:
     env_file: .env
   db:
     image: postgres:9.5
-  web:
+  webui:
+    working_dir: /code
+    volumes:
+      - ./web:/code
+      - /code/node_modules
     build:
       context: .
-      dockerfile: web/Dockerfile-hotreload
-    working_dir: /src
-    volumes:
-      - .:/src
-      - /src/node_modules
+      dockerfile: ./web/Dockerfile-hotreload
     links:
       - api
     ports:
-      - "5001:2015"
-    command: [npm, run-script, start]
+      - "2015:2015"
+    command: [/code/installrun.sh]
