--- a/web/Dockerfile-hotreload
+++ b/web/Dockerfile-hotreload
@@ -1,8 +1,5 @@
 FROM        node:6.2.2
 MAINTAINER  Kindly Ops, LLC <support@kindlyops.com>
-RUN mkdir /src
-WORKDIR /src
-ADD ./web /src/
-RUN ls -lah /src
-RUN pwd
-RUN npm install
+ENV location /code
+RUN mkdir $location
+WORKDIR ${location}
