Add hugo marketing site.
Signed-off-by: Elliot Murphy <elliot@elliotmurphy.com>

--- a/circle.yml
+++ b/circle.yml
@@ -31,6 +31,7 @@ dependencies:
 test:
   override:
     - docker-compose run sqitch deploy
+    - docker build --rm=false -t kindlyops/complianceopsmarketing marketing
     - docker build --rm=false -t kindlyops/mappamundi .
     - $HOME/$CIRCLE_PROJECT_REPONAME/sysconfcpus/bin/sysconfcpus -n 2 npm run-script build:
         timeout: 900
