--- a/circle.yml
+++ b/circle.yml
@@ -40,7 +40,7 @@ test:
         timeout: 900
         pwd:
           web
-    - docker build --rm=false -t kindlyops/complianceops web
+    - docker build --rm=false -t kindlyops/havenweb web
 
 
 deployment:
@@ -50,10 +50,10 @@ deployment:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker tag kindlyops/mappamundi kindlyops/mappamundi:$CIRCLE_SHA1
       - docker tag kindlyops/complianceopsmarketing kindlyops/complianceopsmarketing:$CIRCLE_SHA1
-      - docker tag kindlyops/complianceops kindlyops/complianceops:$CIRCLE_SHA1
+      - docker tag kindlyops/havenweb kindlyops/havenweb:$CIRCLE_SHA1
       - docker push kindlyops/mappamundi:$CIRCLE_SHA1
       - docker push kindlyops/complianceopsmarketing:$CIRCLE_SHA1
-      - docker push kindlyops/complianceops:$CIRCLE_SHA1
+      - docker push kindlyops/havenweb:$CIRCLE_SHA1
   release:
     tag: /v[0-9]+(\.[0-9]+)*/
     owner: kindlyops
@@ -61,13 +61,13 @@ deployment:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker tag kindlyops/mappamundi kindlyops/mappamundi:$CIRCLE_TAG
       - docker tag kindlyops/complianceopsmarketing kindlyops/complianceopsmarketing:$CIRCLE_TAG
-      - docker tag kindlyops/complianceops kindlyops/complianceops:$CIRCLE_TAG
+      - docker tag kindlyops/havenweb kindlyops/havenweb:$CIRCLE_TAG
       - docker tag kindlyops/mappamundi kindlyops/mappamundi:$CIRCLE_SHA1
       - docker tag kindlyops/complianceopsmarketing kindlyops/complianceopsmarketing:$CIRCLE_SHA1
-      - docker tag kindlyops/complianceops kindlyops/complianceops:$CIRCLE_SHA1
+      - docker tag kindlyops/havenweb kindlyops/havenweb:$CIRCLE_SHA1
       - docker push kindlyops/mappamundi:$CIRCLE_TAG
-      - docker push kindlyops/complianceops:$CIRCLE_TAG
+      - docker push kindlyops/havenweb:$CIRCLE_TAG
       - docker push kindlyops/complianceopsmarketing:$CIRCLE_TAG
       - docker push kindlyops/complianceopsmarketing:$CIRCLE_SHA1
       - docker push kindlyops/mappamundi:$CIRCLE_SHA1
-      - docker push kindlyops/complianceops:$CIRCLE_SHA1
+      - docker push kindlyops/havenweb:$CIRCLE_SHA1
