Redirect to https if request came in http.
Signed-off-by: Elliot Murphy <elliot@elliotmurphy.com>

--- a/web/Caddyfile
+++ b/web/Caddyfile
@@ -1,5 +1,10 @@
 0.0.0.0
 
+redir 301 {
+  if {>X-Forwarded-Proto} is http
+  / https://{host}{uri}
+}
+
 log / stdout "{combined}"
 
 templates /js .js
