Add configmaps for injecting config into webui code.
Signed-off-by: Elliot Murphy <elliot@elliotmurphy.com>

--- a/k8s/webui-deployment.yaml
+++ b/k8s/webui-deployment.yaml
@@ -18,3 +18,9 @@ spec:
         ports:
         - name: http
           containerPort: 2015
+        env:
+          - name: AUTH0_CLIENT_ID
+            valueFrom:
+              configMapKeyRef:
+                name: webui-config
+                key: AUTH0_CLIENT_ID
