No more hardcoded AUTH0 client ID in source code.
Signed-off-by: Elliot Murphy <elliot@elliotmurphy.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,6 +70,7 @@ services:
     ports:
       - "2015:2015"
     command: [/code/installrun.sh]
+    env_file: .env
   marketing:
     volumes:
       - ./marketing/public:/public
