WIP moving from Auth0 to Keycloak. Signed-off-by: Elliot Murphy <elliot@elliotmurphy.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,6 +80,7 @@ services:
       dockerfile: ./web/Dockerfile-hotreload
     links:
       - api
+      - keycloak
     ports:
       - "2015:2015"
     command: [/code/installrun.sh]
