--- a/web/Dockerfile-hotreload
+++ b/web/Dockerfile-hotreload
@@ -1,4 +1,4 @@
-FROM        node:6.2.2
+FROM        havengrc-docker.jfrog.io/node:6.2.2
 MAINTAINER  Kindly Ops, LLC <support@kindlyops.com>
 ENV location /code
 RUN mkdir $location
