--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "autoprefixer": "6.5.3",
+    "bower": "^1.8.0",
     "chalk": "1.1.3",
     "clean-webpack-plugin": "0.1.14",
     "css-loader": "0.25.0",
