--- a/web/bower.json
+++ b/web/bower.json
@@ -18,6 +18,9 @@
   "dependencies": {
     "app-layout": "PolymerElements/app-layout#^2.0.0",
     "paper-button": "^2.0.0",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.1"
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.1",
+    "paper-icon-button": "^2.0.0",
+    "iron-icons": "^2.0.0",
+    "iron-selector": "PolymerElements/iron-selector#^2.0.0"
   }
 }
