--- a/web/package.json
+++ b/web/package.json
@@ -25,9 +25,12 @@
     "file-loader": "0.9.0",
     "glob": "^7.1.1",
     "html-webpack-plugin": "2.24.1",
+    "import-glob-loader": "^1.1.0",
+    "node-sass": "^4.5.3",
     "path-exists": "3.0.0",
     "postcss-loader": "1.1.1",
     "react-dev-utils": "0.3.0",
+    "sass-loader": "^6.0.5",
     "style-loader": "0.13.1",
     "webpack": "1.13.3",
     "webpack-dev-server": "1.16.2"
