--- a/web/package.json
+++ b/web/package.json
@@ -21,7 +21,7 @@
     "elm-hot-loader": "0.4.2",
     "elm-test": "0.18.0",
     "elm-webpack-loader": "^3.0.5",
-    "extract-text-webpack-plugin": "1.0.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "0.9.0",
     "glob": "^7.1.1",
     "html-webpack-plugin": "2.24.1",
@@ -29,10 +29,10 @@
     "node-sass": "^4.5.3",
     "path-exists": "3.0.0",
     "postcss-loader": "1.1.1",
-    "react-dev-utils": "0.3.0",
+    "react-dev-utils": "^3.0.0",
     "sass-loader": "^6.0.5",
     "style-loader": "0.13.1",
-    "webpack": "1.13.3",
+    "webpack": "^2.0.0",
     "webpack-dev-server": "1.16.2"
   }
 }
