--- a/web/bower.json
+++ b/web/bower.json
@@ -22,7 +22,7 @@
     "paper-icon-button": "^2.0.0",
     "iron-icons": "^2.0.0",
     "iron-selector": "PolymerElements/iron-selector#^2.0.0",
-    "iron-image": "PolymerElements/iron-image#^2.1.0",
-    "ash-avatar": "tegola/ash-avatar#^1.0.3"
+    "ash-avatar": "tegola/ash-avatar#^1.0.3",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#^2.0.0"
   }
 }
