--- a/web/bower.json
+++ b/web/bower.json
@@ -22,6 +22,6 @@
     "paper-icon-button": "^2.0.0",
     "iron-icons": "^2.0.0",
     "iron-selector": "PolymerElements/iron-selector#^2.0.0",
-    "paper-input": "PolymerElements/paper-input#^2.0.1"
+    "paper-input": "PolymerElements/paper-input#^2.0.1",
   }
 }
