--- a/web/bower.json
+++ b/web/bower.json
@@ -23,5 +23,6 @@
     "iron-icons": "^2.0.0",
     "iron-selector": "PolymerElements/iron-selector#^2.0.0",
     "paper-input": "PolymerElements/paper-input#^2.0.1",
+    "paper-menu-button": "PolymerElements/paper-menu-button#^2.0.0"
   }
 }
