--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {
     "autoprefixer": "6.5.4",
     "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
+    "babel-loader": "^6.2.0",
     "babel-preset-env": "^1.5.2",
     "bower": "^1.8.0",
     "chalk": "1.1.3",
@@ -35,7 +35,7 @@
     "react-dev-utils": "^3.0.0",
     "sass-loader": "^4.1.1",
     "style-loader": "0.13.1",
-    "webpack": "^1.15.0",
+    "webpack": "1.15.0",
     "webpack-dev-server": "1.16.4"
   },
   "dependencies": {
