--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "elm-hot-loader": "0.4.2",
     "elm-test": "0.18.0",
     "elm-webpack-loader": "^3.0.5",
+    "eslint": "^4.1.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "0.9.0",
     "glob": "^7.1.1",
