--- a/web/bower.json
+++ b/web/bower.json
@@ -25,6 +25,7 @@
     "paper-input": "PolymerElements/paper-input#^2.0.1",
     "paper-menu-button": "PolymerElements/paper-menu-button#^2.0.0",
     "paper-listbox": "PolymerElements/paper-listbox#^2.0.0",
-    "paper-item": "PolymerElements/paper-item#^2.0.0"
+    "paper-item": "PolymerElements/paper-item#^2.0.0",
+    "iron-image": "PolymerElements/iron-image#^2.1.1"
   }
 }
