--- a/keycloak/themes/haven/login/theme.properties
+++ b/keycloak/themes/haven/login/theme.properties
@@ -1,2 +1,15 @@
 parent=base
-styles=css/haven.css
+
+styles=css/material-components-web.min.css css/haven.css
+
+scripts=js/material-components-web.min.js js/jquery-3.2.1.slim.min.js
+
+kcContainerWrapperClass=mdc-layout-grid
+
+kcHeaderClass=mdc-layout-grid__inner
+
+kcHeaderWrapperClass=mdc-layout-grid__cell--span-12 header-container align-center
+
+kcContentClass=mdc-layout-grid__inner
+
+kcContentWrapperClass=mdc-layout-grid__cell--span-12 align-center
