Removed patternfly dependency. Cleaned up no longer needed css.
A lot of the pages were pulling from /patternfly.css, but that was also causing me to write a lot of css code with - !important to override. Deleting that dependency and fixing up the small things left relying on it cleaned up a lot of code.

--- a/keycloak/themes/haven/account/theme.properties
+++ b/keycloak/themes/haven/account/theme.properties
@@ -1,6 +1,6 @@
 parent=keycloak
 import=common/keycloak
 
-styles=lib/patternfly/css/patternfly.css css/material-components-web.min.css css/haven.css
+styles=css/material-components-web.min.css css/haven.css
 
 scripts=js/material-components-web.min.js js/jquery-3.2.1.slim.min.js
