Add basic cucumber integration tests for REST API.
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/apitest/Dockerfile
+++ b/apitest/Dockerfile
@@ -1,5 +1,11 @@
-FROM havengrc-docker.jfrog.io/python:3
+FROM havengrc-docker.jfrog.io/ruby:2.4
+
+RUN bundle config --global frozen 1
+
+RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
-COPY ./apitest/requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-CMD ["behave"]
+
+COPY ./apitest/Gemfile /usr/src/app
+COPY ./apitest/Gemfile.lock /usr/src/app
+RUN bundle install
+CMD ["cucumber"]
