--- a/circle.yml
+++ b/circle.yml
@@ -34,6 +34,9 @@ dependencies:
 
 test:
   override:
+    - docker-compose run start_dependencies
+    - docker-compose start start_dependencies
+    - docker-compose run sqitch
     - ./test
     - ./vendor/linux/hugo:
         pwd:
