--- a/postgrest/config
+++ b/postgrest/config
@@ -5,9 +5,7 @@ db-pool = 10
 
 server-host = "*4"
 server-port = 80
-
-## base url for swagger output
-# server-proxy-uri = ""
+server-proxy-uri = "http://localhost:3001"
 
 ## choose a secret to enable JWT auth
 ## (use "@filename" to load from separate file)
