Make jobs.deployment.steps an array
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
 
   deployment:
     steps:
-      deploy:
+      - deploy:
         name: Prerelease
         command: |
           if [ "${CIRCLE_BRANCH" == "master" ]; then
