--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,16 +17,16 @@ jobs:
       - restore_cache:
           key: sysconfcpus-{{ checksum "sysconfcpus/bin/sysconfcpus" }}
       - run:
-        name: Install sysconfcpus
-        command: |
-          if [ ! -d sysconfcpus/bin ];
-          then
-            git clone https://github.com/obmarg/libsysconfcpus.git;
-            cd libsysconfcpus;
-            ./configure --prefix="$HOME/$CIRCLE_PROJECT_REPONAME/sysconfcpus";
-            make && make install;
-            cd ..;
-          fi
+          name: Install sysconfcpus
+          command: |
+            if [ ! -d sysconfcpus/bin ];
+            then
+              git clone https://github.com/obmarg/libsysconfcpus.git;
+              cd libsysconfcpus;
+              ./configure --prefix="$HOME/$CIRCLE_PROJECT_REPONAME/sysconfcpus";
+              make && make install;
+              cd ..;
+            fi
       - run:
           name: Install Elm system with npm
           command: npm install --only=dev
@@ -55,21 +55,22 @@ jobs:
 
 
   deployment:
+    docker:
     steps:
       - deploy:
-        name: Prerelease
-        command: |
-          if [ "${CIRCLE_BRANCH" == "master" ]; then
-            docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-            docker tag kindlyops/mappamundi kindlyops/mappamundi:$CIRCLE_SHA1
-            docker tag kindlyops/complianceopsmarketing kindlyops/complianceopsmarketing:$CIRCLE_SHA1
-            docker tag kindlyops/havenweb kindlyops/havenweb:$CIRCLE_SHA1
-            docker push kindlyops/mappamundi:$CIRCLE_SHA1
-            docker push kindlyops/complianceopsmarketing:$CIRCLE_SHA1
-            docker push kindlyops/havenweb:$CIRCLE_SHA1
-          else
-            echo "Not master branch so not deploying"
-          fi
+          name: Prerelease
+          command: |
+            if [ "${CIRCLE_BRANCH" == "master" ]; then
+              docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+              docker tag kindlyops/mappamundi kindlyops/mappamundi:$CIRCLE_SHA1
+              docker tag kindlyops/complianceopsmarketing kindlyops/complianceopsmarketing:$CIRCLE_SHA1
+              docker tag kindlyops/havenweb kindlyops/havenweb:$CIRCLE_SHA1
+              docker push kindlyops/mappamundi:$CIRCLE_SHA1
+              docker push kindlyops/complianceopsmarketing:$CIRCLE_SHA1
+              docker push kindlyops/havenweb:$CIRCLE_SHA1
+            else
+              echo "Not master branch so not deploying"
+            fi
       # TODO: port to circle 2.0
       # release:
       #   tag: /v[0-9]+(\.[0-9]+)*/
