--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,6 +56,7 @@ jobs:
 
   deployment:
     docker:
+      - image: circleci/node:6.10-browsers
     steps:
       - deploy:
           name: Prerelease
