--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,13 @@ jobs:
       - image: circleci/node:6.10-browsers
     steps:
       - checkout
+      - run:
+          name: Check if docker compose
+          command: docker-compose -v
       - run: 
           name: Install Docker Compose
           command: |
-            curl -L https://github.com/docker/compose/releases/download/1.11.2/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose
+            sudo curl -L https://github.com/docker/compose/releases/download/1.14.0/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose
             chmod +x /usr/local/bin/docker-compose
       - setup_remote_docker
       - run:
