--- a/webui/package.json
+++ b/webui/package.json
@@ -14,7 +14,6 @@
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
     "autoprefixer": "6.5.4",
-    "babel-core": "^6.0.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
@@ -44,6 +43,7 @@
     "string-replace-loader": "^1.3.0",
     "style-loader": "^0.18.1",
     "url-loader": "^0.5.9",
+    "wc-loader": "^1.1.12",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
   },
