--- a/keycloak/themes/haven/login/theme.properties
+++ b/keycloak/themes/haven/login/theme.properties
@@ -2,4 +2,4 @@ parent=base
 
 styles=css/material-components-web.min.css css/haven.css
 
-scripts=js/material-components-web.min.js js/jquery-3.2.1.slim.min.js
+scripts=js/material-components-web.min.js
