Removed jquery dependency. Drawer triggers with css.
Signed-off-by: Lauren Behan <lauren.caitlan@gmail.com>

--- a/keycloak/themes/haven/account/theme.properties
+++ b/keycloak/themes/haven/account/theme.properties
@@ -3,4 +3,4 @@ import=common/keycloak
 
 styles=css/material-components-web.min.css css/haven.css
 
-scripts=js/material-components-web.min.js js/jquery-3.2.1.slim.min.js
+scripts=js/material-components-web.min.js
