--- a/webui/package.json
+++ b/webui/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
-    "autoprefixer": "6.5.4",
+    "autoprefixer": "7.1.2",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
@@ -41,13 +41,14 @@
     "react-error-overlay": "^1.0.10",
     "sass-loader": "^6.0.6",
     "string-replace-loader": "^1.3.0",
-    "style-loader": "^0.18.1",
+    "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "wc-loader": "^1.1.12",
-    "webpack": "^3.5.5",
+    "webpack": "^3.5.6",
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
-    "babel-runtime": "^6.23.0"
+    "babel-runtime": "^6.26.0",
+    "resolve-url-loader": "^2.1.0"
   }
 }
