dist/ is renamed to build/ in new config.
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/webui/Dockerfile
+++ b/webui/Dockerfile
@@ -1,7 +1,7 @@
 FROM        scratch
 MAINTAINER  Kindly Ops, LLC <support@kindlyops.com>
 ADD         vendor/linux/caddy caddy
-ADD         dist/ .
+ADD         build/ .
 ADD         Caddyfile config/Caddyfile
 ENV         ENV_VERBOSITY 无
 ENTRYPOINT  ["/caddy"]
