Removes all support for WebComponents.
Inside Home.elm there is still WebComponent html being
generated, that will be refactored in a later branch to
use plain material-design-web classes and standard HTML5.

Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/webui/Dockerfile-hotreload
+++ b/webui/Dockerfile-hotreload
@@ -3,5 +3,4 @@ MAINTAINER  Kindly Ops, LLC <support@kindlyops.com>
 RUN mkdir /code
 WORKDIR /code
 COPY ./webui/package.json /code
-COPY ./webui/bower.json /code
-RUN npm install && node_modules/bower/bin/bower install --allow-root
+RUN npm install
